deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-no-autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-1
      version: v1
  template:
    metadata:
      labels:
        app: my-app-1
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: 'app'
                    operator: In
                    values:
                      - my-app-1
                      - my-app-2
              topologyKey: 'topology.kubernetes.io/zone'
      containers:
        - name: container
          image: arenchill/videoapp:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-autoscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-2
      version: v2
  template:
    metadata:
      labels:
        app: my-app-2
        version: v2
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: 'app'
                    operator: In
                    values:
                      - my-app-1
                      - my-app-2
              topologyKey: 'topology.kubernetes.io/zone'
      containers:
        - name: container
          image: arenchill/videoapp:latest
          ports:
            - containerPort: 8080
